review: address code review feedback
- add interface-target, empty-regex, and ?-glob tests
- rethrow fatal Error in toInterceptor; add --add-opens hint on IllegalAccessException
- remove stale constructor-args scenario from spec test table
- fix README wording (runtime, not compile-time)